Fixed: alignment issues on landing page

--- a/src/containers/landing/landing.scss
+++ b/src/containers/landing/landing.scss
@@ -1,8 +1,13 @@
+@import '../../styles/includeMedia';
+
 .landing {
   &-container {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    position: relative;
+    top: 25%;
+
+    @include media('<=iphoneplus') {
+      top: 10%;
+    }
 
     h1 {
       margin-bottom: 45px;
